--- a/01_orientation/learn/create_and_run.ipynb
+++ b/01_orientation/learn/create_and_run.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "1. To create a Python file, right-click on the blank space in project Explorer in the Grader Than IDE.\n",
     "\n",
-    "    ![blank space area](https://github.com/HWilliams64/summer_python_12_week/01_orientation/img/blank_space_click.png)\n",
+    "    ![blank space area](https://raw.githubusercontent.com/HWilliams64/summer_python_12_week/main/01_orientation/img/blank_space_click.png)\n",
     "\n",
     "2. In the menu that appears select the option labled \"New File...\".\n",
     "\n",
