--- a/02_basics/learn/01_variables.ipynb
+++ b/02_basics/learn/01_variables.ipynb
@@ -7,8 +7,6 @@
    "source": [
     "# Variables in Python\n",
     "\n",
-    "\n",
-    "\n",
     "Hey there! Are you excited to learn about variables in Python? Variables are like containers that hold different types of data like numbers, text, and more. We can use them to make our programs more dynamic and interactive. "
    ]
   },
@@ -46,6 +44,10 @@
    "metadata": {},
    "source": [
     "## Printing text to the console\n",
+    "\n",
+    "<div style=\"position:relative; width:90%; height:0px; padding-bottom:56.25%;\">\n",
+    "    <iframe style=\"position:absolute; left:0; top:0; width:90%; height:90%; max-width: 1280px; max-height: 720px\"src=\"https://www.youtube.com/embed/90XKxrn3tG8\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "</div>\n",
     "\n",
     "Now that we have assigned some data to variables, let's print them to the console. To do this, we use the `print()` function. For example:"
    ]
@@ -211,7 +213,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Type casting\n",
+    "## Type casting\n",
+    "\n",
+    "<div style=\"position:relative; width:90%; height:0px; padding-bottom:56.25%;\">\n",
+    "    <iframe style=\"position:absolute; left:0; top:0; width:90%; height:90%; max-width: 1280px; max-height: 720px\"src=\"https://www.youtube.com/embed/t67uh911RmM\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "</div>\n",
     "\n",
     "In Python, we can also convert one data type to another using type casting. For example, we can convert an string to a integer like this:"
    ]
