--- a/02_basics/learn/02_strings.ipynb
+++ b/02_basics/learn/02_strings.ipynb
@@ -17,6 +17,10 @@
    "source": [
     "## What is a String?\n",
     "\n",
+    "<div style=\"position:relative; width:90%; height:0px; padding-bottom:56.25%;\">\n",
+    "    <iframe style=\"position:absolute; left:0; top:0; width:90%; height:90%; max-width: 1280px; max-height: 720px\"src=\"https://www.youtube.com/embed/V3__h0bESo4\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "</div>\n",
+    "\n",
     "In Python, a string is a sequence of characters enclosed within quotation marks. It can be created using either single quotes (`''`), double quotes (`\"\"`) or triple quotes (`\"\"\"`)."
    ]
   },
@@ -27,8 +31,14 @@
    "outputs": [],
    "source": [
     "message = 'Hello, World!'\n",
+    "print(message)\n",
+    "\n",
     "name = \"Alice\"\n",
-    "quote = \"\"\"Python is awesome!\"\"\""
+    "print(name)\n",
+    "\n",
+    "multiline = \"\"\"Python is\n",
+    "awesome!\"\"\"\n",
+    "print(multiline)"
    ]
   },
   {
@@ -37,6 +47,10 @@
    "metadata": {},
    "source": [
     "## Accessing Characters in a String:\n",
+    "\n",
+    "<div style=\"position:relative; width:90%; height:0px; padding-bottom:56.25%;\">\n",
+    "    <iframe style=\"position:absolute; left:0; top:0; width:90%; height:90%; max-width: 1280px; max-height: 720px\"src=\"https://www.youtube.com/embed/__tILikbgVI\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "</div>\n",
     "\n",
     "Each character in a string can be accessed using its index. In Python, the\n",
     "indices start from 0 for the first character and increment by 1 for each\n",
@@ -70,7 +84,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " `len()` - Returns the length (number of characters) of a string."
+    " `len()` - Returns the length (number of characters) of a string.\n",
+    "\n",
+    "<div style=\"position:relative; width:90%; height:0px; padding-bottom:56.25%;\">\n",
+    "    <iframe style=\"position:absolute; left:0; top:0; width:90%; height:90%; max-width: 1280px; max-height: 720px\"src=\"https://www.youtube.com/embed/8eYab050adM\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "</div>"
    ]
   },
   {
@@ -281,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using f-strings (formatted strings):\n",
+    "## f-strings (formatted strings):\n",
     "\n",
     "Formatted strings, also known as f-strings, provide a concise and expressive way to concatenate strings by embedding variables or expressions inside curly braces `{}`.\n",
     "\n",
