--- a/02_basics/learn/03_arithmetic.ipynb
+++ b/02_basics/learn/03_arithmetic.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction:\n",
+    "# Arithmetic Operators:\n",
     "\n",
     "Hello, fellow python math enthusiasts! In this tutorial, we will embark on an\n",
     "exciting journey into the world of basic arithmetic in Python. Python is not\n",
@@ -176,6 +176,154 @@
     "exponentiation_result = x ** y\n",
     "print(exponentiation_result)  # Output: 8\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# In-Place Arithmetic Operators:\n",
+    "\n",
+    "Now we'll explore the powerful in-place arithmetic operators in Python. These\n",
+    "operators provide a convenient and concise way to perform arithmetic operations\n",
+    "and update the value of a variable in a single step. Let's dive in and discover\n",
+    "the magic of `+=`, `-=`, `*=`, and `/=`!\n",
+    "\n",
+    "The in-place arithmetic operators calculate the value and reassign to the\n",
+    "original value. \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `+=` Operator:\n",
+    "\n",
+    "The `+=` operator combines addition and assignment, allowing us to add a value to\n",
+    "a variable and update its value in one step.\n",
+    "\n",
+    "```py\n",
+    "x = 5\n",
+    "x = x + 3\n",
+    "print(x)\n",
+    "```\n",
+    "The code above is rewritten using an in-place operator below:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 5\n",
+    "x += 3\n",
+    "print(x)  # Output: 8\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The statement `x += 3` is equivalent to `x = x + 3.` It adds `3` to the current value of `x` and assigns the result back to `x`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `-=` Operator:\n",
+    "\n",
+    "The `-= `operator combines subtraction and assignment, subtracting a value from a variable and updating its value in one step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "x -= 4\n",
+    "print(x)  # Output: 6"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The statement `x -= 4` is equivalent to `x = x - 4`. It subtracts `4` from the current value of `x` and assigns the result back to `x`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `*=` Operator:\n",
+    "\n",
+    "The `*=` operator combines multiplication and assignment, multiplying a variable by a value and updating its value in one step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 3\n",
+    "x *= 2\n",
+    "print(x)  # Output: 6"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The statement `x *= 2` is equivalent to `x = x * 2`. It multiplies the current value of `x` by `2` and assigns the result back to `x`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `/=` Operator:\n",
+    "\n",
+    "The `/=` operator combines division and assignment, dividing a variable by a value and updating its value in one step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "x /= 3\n",
+    "print(x)  # Output: 3.3333333333333335"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The statement `x /= 3` is equivalent to `x = x / 3`. It divides the current value of `x` by `3` and assigns the result back to `x`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In all cases, the in-place arithmetic operators modify the value of the variable on the left-hand side of the operator using the arithmetic operation specified on the right-hand side."
+   ]
   }
  ],
  "metadata": {
@@ -185,8 +333,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
