improved video dynamic sizing

--- a/02_basics/learn/02_strings.ipynb
+++ b/02_basics/learn/02_strings.ipynb
@@ -17,8 +17,17 @@
    "source": [
     "## What is a String?\n",
     "\n",
-    "<div style=\"position:relative; width:90%; height:0px; padding-bottom:56.25%;\">\n",
-    "    <iframe style=\"position:absolute; left:0; top:0; width:90%; height:90%; max-width: 1280px; max-height: 720px\"src=\"https://www.youtube.com/embed/V3__h0bESo4\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/V3__h0bESo4\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
     "</div>\n",
     "\n",
     "In Python, a string is a sequence of characters enclosed within quotation marks. It can be created using either single quotes (`''`), double quotes (`\"\"`) or triple quotes (`\"\"\"`)."
@@ -48,8 +57,17 @@
    "source": [
     "## Accessing Characters in a String:\n",
     "\n",
-    "<div style=\"position:relative; width:90%; height:0px; padding-bottom:56.25%;\">\n",
-    "    <iframe style=\"position:absolute; left:0; top:0; width:90%; height:90%; max-width: 1280px; max-height: 720px\"src=\"https://www.youtube.com/embed/__tILikbgVI\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/__tILikbgVI\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
     "</div>\n",
     "\n",
     "Each character in a string can be accessed using its index. In Python, the\n",
@@ -86,8 +104,17 @@
    "source": [
     " `len()` - Returns the length (number of characters) of a string.\n",
     "\n",
-    "<div style=\"position:relative; width:90%; height:0px; padding-bottom:56.25%;\">\n",
-    "    <iframe style=\"position:absolute; left:0; top:0; width:90%; height:90%; max-width: 1280px; max-height: 720px\"src=\"https://www.youtube.com/embed/8eYab050adM\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/8eYab050adM\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
     "</div>"
    ]
   },
