--- a/02_basics/learn/01_variables.ipynb
+++ b/02_basics/learn/01_variables.ipynb
@@ -45,8 +45,17 @@
    "source": [
     "## Printing text to the console\n",
     "\n",
-    "<div style=\"position:relative; width:90%; height:0px; padding-bottom:56.25%;\">\n",
-    "    <iframe style=\"position:absolute; left:0; top:0; width:90%; height:90%; max-width: 1280px; max-height: 720px\"src=\"https://www.youtube.com/embed/90XKxrn3tG8\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/90XKxrn3tG8\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
     "</div>\n",
     "\n",
     "Now that we have assigned some data to variables, let's print them to the console. To do this, we use the `print()` function. For example:"
@@ -215,8 +224,17 @@
    "source": [
     "## Type casting\n",
     "\n",
-    "<div style=\"position:relative; width:90%; height:0px; padding-bottom:56.25%;\">\n",
-    "    <iframe style=\"position:absolute; left:0; top:0; width:90%; height:90%; max-width: 1280px; max-height: 720px\"src=\"https://www.youtube.com/embed/t67uh911RmM\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/t67uh911RmM\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
     "</div>\n",
     "\n",
     "In Python, we can also convert one data type to another using type casting. For example, we can convert an string to a integer like this:"
