--- a/02_basics/learn/02_strings.ipynb
+++ b/02_basics/learn/02_strings.ipynb
@@ -133,7 +133,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`lower()` and `upper()` - Converts a string to lowercase or uppercase, respectively."
+    "`lower()` and `upper()` - Converts a string to lowercase or uppercase,\n",
+    "respectively.\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/5pcFb7BqriU\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>"
    ]
   },
   {
@@ -152,7 +166,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`count()` - Returns the number of occurrences of a substring in a string."
+    "`count()` - Returns the number of occurrences of a substring in a string.\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/ZJoxGcwtM1Q\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>"
    ]
   },
   {
@@ -171,7 +198,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`replace()` - Replaces all occurrences of a substring with another substring."
+    "`replace()` - Replaces all occurrences of a substring with another substring.\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/XuTlcedyCCM\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>"
    ]
   },
   {
@@ -190,7 +230,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`split()` - Splits a string into a list of substrings based on a delimiter."
+    "`split()` - Splits a string into a list of substrings based on a delimiter.\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/Gei7_zDc56o\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>"
    ]
   },
   {
@@ -248,7 +301,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`startswith()` and `endswith()` - Checks if a string starts or ends with a specified substring."
+    "`startswith()` and `endswith()` - Checks if a string starts or ends with a\n",
+    "specified substring.\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/uFI01--DWAI\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>"
    ]
   },
   {
@@ -268,6 +335,19 @@
    "metadata": {},
    "source": [
     "## String Concatenation:\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/AN1uR8ksh4k\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
     "\n",
     "String concatenation is the process of combining multiple strings into a single\n",
     "string. In Python, there are a few ways to achieve string concatenation. \n"
@@ -327,6 +407,19 @@
    "metadata": {},
    "source": [
     "## f-strings (formatted strings):\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/TZSDLuanBVs\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
     "\n",
     "Formatted strings, also known as f-strings, provide a concise and expressive way to concatenate strings by embedding variables or expressions inside curly braces `{}`.\n",
     "\n",
