--- a/03_branch_statements/learn/02_branch_statements.ipynb
+++ b/03_branch_statements/learn/02_branch_statements.ipynb
@@ -18,6 +18,19 @@
    "source": [
     "## If Statements\n",
     "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/zPduPIqv1Us\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "The if statement is used to perform different actions based on different\n",
     "conditions. It allows us to execute a block of code only if a certain condition\n",
     "is satisfied. The if statement is typically followed by one or more elif (short\n",
@@ -78,6 +91,19 @@
    "source": [
     "## Elif Statement\n",
     "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/e3xnXXPKWuY\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "Now, let's move on to the `elif` statement. The `elif` statement allows us to\n",
     "check additional conditions if the preceding if or `elif` conditions are\n",
     "`False`. It's optional and can appear zero or more times after the if statement\n",
@@ -103,6 +129,19 @@
    "metadata": {},
    "source": [
     "## Else Statement\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/Rg_cSvyWli8\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
     "\n",
     "Finally, we have the else statement. It's used as a catch-all block when none of\n",
     "the preceding conditions are True. The else statement is optional and can only\n",
