--- a/03_branch_statements/learn/03_comparison.ipynb
+++ b/03_branch_statements/learn/03_comparison.ipynb
@@ -7,6 +7,19 @@
    "source": [
     "# `Is` vs `==`\n",
     "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/FTa7S-KmR-Y\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "Let's explore the difference between the `is` and `==` operators in Python. "
    ]
   },
