--- a/05_functions/learn/01_functions.ipynb
+++ b/05_functions/learn/01_functions.ipynb
@@ -18,10 +18,34 @@
    "source": [
     "## Defining \n",
     "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/3X56t-ESiZ4\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "First, let's talk about functions. In programming, a function is a block of code\n",
     "that performs a specific task. Functions can be reused throughout your code,\n",
-    "making it easier to maintain and organize your program. Here's an example of a\n",
-    "function in Python: "
+    "making it easier to maintain and organize your program.\n",
+    "\n",
+    "A function in Python is defined with the `def` keyword, followed by the\n",
+    "function's name and a pair of parentheses `()`, which may enclose some\n",
+    "parameters. It is then followed by a colon `:`, and the body of the function is\n",
+    "indented under this definition.\n",
+    "\n",
+    "```py\n",
+    "def FUNCTION_NAME():\n",
+    "    # Code Block\n",
+    "```\n",
+    "\n",
+    "Here is a very basic function definition:\n"
    ]
   },
   {
@@ -65,9 +89,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Parameters\n",
+    "# Arguments\n",
     "\n",
-    "Next, let's talk about parameters. Parameters are values that you can pass into a function to modify its behavior. Here's an example:"
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/5-7xUttVgao\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "Next, let's talk about arguments. Function arguments are values that you can pass into a function to modify its behavior. Here's an example:"
    ]
   },
   {
@@ -85,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function takes a parameter named `name` and uses it to print a personalized greeting. To call the function and pass in a name, you would do the following:"
+    "This function takes a argument named `name` and uses it to print a personalized greeting. To call the function and pass in a name, you would do the following:"
    ]
   },
   {
@@ -123,7 +160,33 @@
    "source": [
     "## Return Statements\n",
     "\n",
-    "Now, let's talk about return statements. A return statement is used to exit a function and return a value to the caller. Here's an example:"
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/Z36RTT1x1mo\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "Now, let's talk about return statements. A return statement is used to exit a\n",
+    "function and return a value to the caller. The syntax of a return statement is\n",
+    "as follows:\n",
+    "\n",
+    "```py\n",
+    "return VALUE\n",
+    "```\n",
+    "\n",
+    "- `return` is a python keyword that tells the function to go back to the line\n",
+    "  that called it. \n",
+    "- `VALUE` is the name of a variable who's value will be sent back the line that\n",
+    "  called it.\n",
+    "\n",
+    "Here's an example:"
    ]
   },
   {
@@ -176,6 +239,19 @@
    "metadata": {},
    "source": [
     "## Scope\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/1w98xSisuyo\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
     "\n",
     "Finally, let's talk about variable scope. In programming, the scope of a\n",
     "variable is the region of the code where it can be accessed. There are two types\n",
