--- a/07_objects/learn/03_access_modifiers.ipynb
+++ b/07_objects/learn/03_access_modifiers.ipynb
@@ -7,7 +7,24 @@
    "source": [
     "# Understanding Access Modifiers in Python\n",
     "\n",
-    "Access modifiers (also known as access specifiers) are used in object-oriented programming to set the accessibility of classes, methods, and properties. They determine the scope of a variable, method, or class in a program. However, Python doesn't support true access modifiers in the same way that languages like Java or C++ do. Still, there are certain conventions in Python that offer similar functionality.\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/jnHQHeq2jgI\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "Access modifiers, also known as access specifiers, are foundational elements in object-oriented programming languages. Their primary role is to establish rules for how classes, methods, and variables can be accessed within a program. To put it simply, they help define the boundaries or the 'scope' of a particular piece of data or function. For instance, a class or a method may be accessible from anywhere in the code, or it may be limited to its own class or even a particular method within that class. \n",
+    "\n",
+    "Access modifiers are integral in safeguarding data integrity and encapsulation in your programs. They prevent unauthorized access and modification of data, ensuring that only approved parts of your code can interact with the data or methods that these modifiers protect.\n",
+    "\n",
+    "But when it comes to Python, things are a bit different. Python doesn't offer the traditional access modifiers like 'private', 'public', or 'protected' found in languages such as Java or C++. However, Python provides certain conventions, primarily using underscores, to simulate the behavior of access modifiers, albeit in a more flexible and less enforced manner. In the following tutorial, we'll explore how these conventions work.\n",
     "\n",
     "Let's go over the main ones:\n"
    ]
