--- a/07_objects/learn/01_classes_and_objects.ipynb
+++ b/07_objects/learn/01_classes_and_objects.ipynb
@@ -16,7 +16,23 @@
     "\n",
     "You can think of a class as a blueprint for a house. It defines the dimensions, layout, and materials but doesn't exist as a physical entity until it's built. Once you have the blueprint, you can build as many houses as you want from it, and each house (an instance of the class) can have its own specific characteristics (instance variables) like color, decor, etc., while adhering to the blueprint. \n",
     "\n",
-    "For example, consider a `Car` class. The class might define attributes like `make`, `model`, and `color`, and methods like `drive`, `brake`, and `park`. You can then create instances (objects) of the `Car` class like `myCar` or `yourCar`, each with its own specific make, model, and color."
+    "For example, consider a `Car` class. The class might define attributes like\n",
+    "`make`, `model`, and `color`, and methods like `drive`, `brake`, and `park`. You\n",
+    "can then create instances (objects) of the `Car` class like `myCar` or\n",
+    "`yourCar`, each with its own specific make, model, and color.\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/m_3gQmFOcfA\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>"
    ]
   },
   {
@@ -83,7 +99,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class Methods Argument\n",
+    "## Class Methods\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/DpV3A2WOKPs\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
     "\n",
     "A class method is a function defined inside a class, which typically performs\n",
     "actions related to the objects of that class. Method's first argument is always the\n",
@@ -129,6 +158,19 @@
    "source": [
     "## `__init__` Method\n",
     "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/YJV5GjRrjJI\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "The `__init__` method in Python is a special method that gets automatically called when a new object is instantiated from a class. It's also known as a constructor in object-oriented programming concepts. This method is used to initialize the attributes or variables of a class for a specific instance.\n",
     "\n",
     "The name `__init__` is a bit of Python magic: any method surrounded by double underscores like this is a special built-in method with a specific purpose. \n",
@@ -172,6 +214,19 @@
    "metadata": {},
    "source": [
     "## More on `self`\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/rnQqoAK-974\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
     "\n",
     "In Python, `self` is a convention used in instance methods to refer to the instance the method is currently being called on. It's the first parameter in an instance method, and Python automatically binds it to the instance when you call the method on it.\n",
     "\n",
@@ -223,6 +278,19 @@
    "source": [
     "## Getters and Setters\n",
     "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/lohiTnqXr8I\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "Getters and Setters are used to protect your class's variables by controlling how they are accessed and modified. In Python, you can implement getters and setters like so:"
    ]
   },
@@ -273,6 +341,19 @@
    "source": [
     "## Class Variables, Instance Variables, and Local Variables\n",
     "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/_MTR8r8ksLs\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "- **Class Variables**: These are variables that are shared among all instances of a class. They're defined directly within a class but outside any of the class's methods.\n",
     "\n",
     "- **Instance Variables**: These are variables that are unique to each instance. They're defined inside a method and are prefixed with `self`.\n",
@@ -316,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
