Added videos to file module

--- a/08_file_io/learn/03_json.ipynb
+++ b/08_file_io/learn/03_json.ipynb
@@ -17,6 +17,19 @@
    "source": [
     "## Introduction to JSON\n",
     "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/RFcmyIxHdOE\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "JSON, short for JavaScript Object Notation, is a lightweight data interchange format that is easy for humans to read and write and easy for machines to parse and generate. \n",
     "\n",
     "JSON is language-independent and can represent data structures and associative arrays used in most programming languages. Therefore, it's an excellent choice for data exchange between client and server in web applications, or for storing complex data in a human-readable format.\n",
@@ -61,6 +74,19 @@
    "metadata": {},
    "source": [
     "## Reading and Writing JSON Data\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/FABwNhZA9pk\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
     "\n",
     "Let's jump into the code and see how we can interact with JSON data in Python.\n"
    ]
