--- a/08_file_io/learn/01_reading_and_writing_to_text_files.ipynb
+++ b/08_file_io/learn/01_reading_and_writing_to_text_files.ipynb
@@ -7,7 +7,24 @@
    "source": [
     "# Reading and Writing to Text Files in Python\n",
     "\n",
-    "Welcome to the exciting world of file I/O operations in Python! In this tutorial, we're going to explore the basic process of opening, reading, writing, and closing text files. By the end of this tutorial, you will not only understand these fundamental operations but also get hands-on experience with reading from and writing to files in Python. So, let's dive in!\n",
+    "Welcome to the exciting world of file I/O operations in Python! In this\n",
+    "tutorial, we're going to explore the basic process of opening, reading, writing,\n",
+    "and closing text files. By the end of this tutorial, you will not only\n",
+    "understand these fundamental operations but also get hands-on experience with\n",
+    "reading from and writing to files in Python. So, let's dive in!\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/jnHQHeq2jgI\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "\n",
     "## Understanding the File I/O Process\n",
     "\n",
@@ -82,6 +99,19 @@
    "source": [
     "### `'w'` Mode\n",
     "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/rHGmullR6_o\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "The 'w' mode in Python stands for write. When you open a file in 'w' mode, you're saying \"I want to write data to this file\". Here's a basic example:\n"
    ]
   },
@@ -113,6 +143,19 @@
    "source": [
     "### `'a'` Mode\n",
     "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/XFPIibPUSMU\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
     "That's where 'a' mode comes in. The 'a' in 'a' mode stands for append. When you open a file in 'a' mode, you're saying \"I want to add data to this file, without removing what's already there\". Here's how to do it:\n"
    ]
   },
@@ -142,6 +185,19 @@
    "source": [
     "\n",
     "## Reading from a File\n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/PdauzXCfCbc\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>\n",
     "\n",
     "Once a file is opened in read mode, we can read its contents. There are a few ways to do this:\n",
     "\n",
