--- a/08_file_io/learn/02_context_managers.ipynb
+++ b/08_file_io/learn/02_context_managers.ipynb
@@ -7,7 +7,20 @@
    "source": [
     "# Efficient File Handling with Context Managers in Python\n",
     "\n",
-    "Welcome to the tutorial on efficient file handling in Python using context managers! Context managers are an excellent feature in Python that enable cleaner and more efficient code, especially when it comes to file handling. They not only make your code more readable but also help to prevent common mistakes that can lead to bugs or, even worse, data corruption. \n"
+    "Welcome to the tutorial on efficient file handling in Python using context managers! Context managers are an excellent feature in Python that enable cleaner and more efficient code, especially when it comes to file handling. They not only make your code more readable but also help to prevent common mistakes that can lead to bugs or, even worse, data corruption. \n",
+    "\n",
+    "<style>\n",
+    "html,body        {height: 100%;}\n",
+    ".wrapper         {width: 80%; max-width: 1280px; height: 100%; margin: 0 auto; background: rgba(255, 255, 255, .0); padding-bottom: 50px}\n",
+    ".h_iframe        {position: relative; padding-top: 56%;}\n",
+    ".h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"wrapper\">\n",
+    "    <div class=\"h_iframe\">\n",
+    "        <iframe height=\"2\" width=\"2\" src=\"https://www.youtube.com/embed/pU0X9xjB8Fc\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>\n",
+    "    </div>\n",
+    "</div>"
    ]
   },
   {
@@ -115,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
