Added a section that explains working with the exception object

--- a/09_error_handling/learn/01_try_except.ipynb
+++ b/09_error_handling/learn/01_try_except.ipynb
@@ -115,6 +115,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Working with the Exception\n",
+    "\n",
+    "When an exception is caught, you can also interact with the exception instance\n",
+    "itself. For example, the exception instance can have additional information\n",
+    "about what exactly went wrong. To do this, you \"capture\" the exception in a\n",
+    "variable using this format:\n",
+    "\n",
+    "```python\n",
+    "except ExceptionType as variable_name:\n",
+    "```\n",
+    "\n",
+    "Here's an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    x = 1 / 0\n",
+    "except ZeroDivisionError as e:\n",
+    "    print(\"Caught an exception: \", str(e))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, the `ZeroDivisionError` instance is captured as the variable `e`, and we print out the exception message by converting `e` to a string.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Handling Specific Exceptions\n",
     "\n",
