Replaced mobilechelonian with ipyturtle

--- a/01_orientation/learn/02_turtle.ipynb
+++ b/01_orientation/learn/02_turtle.ipynb
@@ -52,7 +52,7 @@
     "## How does this work?\n",
     "\n",
     "```python\n",
-    "from mobilechelonian import Turtle\n",
+    "from ipyturtle import Turtle\n",
     "squirtle = Turtle()\n",
     "```\n",
     "\n",
