--- a/02_basics/learn/01_variables.ipynb
+++ b/02_basics/learn/01_variables.ipynb
@@ -303,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mobilechelonian import Turtle\n",
+    "from ipyturtle import Turtle\n",
     "\n",
     "squirtle = Turtle()\n",
     "speed = 1\n",
@@ -318,7 +318,7 @@
    "metadata": {},
    "source": [
     "So, in this code, a little turtle named `squirtle` comes to life! With the help\n",
-    "of some special magic from `mobilechelonian`, we are able to control\n",
+    "of some special magic from `ipyturtle`, we are able to control\n",
     "`squirtle`'s movements.  \n",
     "\n",
     "We first set `squirtle`'s speed to be `1` by calling the\n",
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mobilechelonian import Turtle\n",
+    "from ipyturtle import Turtle\n",
     "\n",
     "squirtle = Turtle()\n",
     "speed = 1\n",
@@ -390,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mobilechelonian import Turtle\n",
+    "from ipyturtle import Turtle\n",
     "\n",
     "squirtle = Turtle()\n",
     "speed = 1\n",
