--- a/04_loops/learn/01_while_loops.ipynb
+++ b/04_loops/learn/01_while_loops.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mobilechelonian import Turtle\n",
+    "from ipyturtle import Turtle\n",
     "\n",
     "squirtle = Turtle()\n",
     "forward = 5\n",
