--- a/04_loops/learn/02_for_loops.ipynb
+++ b/04_loops/learn/02_for_loops.ipynb
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mobilechelonian import Turtle\n",
+    "from ipyturtle import Turtle\n",
     "\n",
     "squirtle = Turtle()\n",
     "forward = 100\n",
