--- a/05_functions/learn/01_functions.ipynb
+++ b/05_functions/learn/01_functions.ipynb
@@ -384,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mobilechelonian import Turtle\n",
+    "from ipyturtle import Turtle\n",
     "\n",
     "squirtle = Turtle()\n",
     "\n",
@@ -416,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mobilechelonian import Turtle\n",
+    "from ipyturtle import Turtle\n",
     "colors = ['red', 'green', 'blue', 'yellow', 'white', 'black', 'purple', 'brown']\n",
     "\n",
     "squirtle = Turtle()\n",
